[airport-controller] and updated the method createAirport